fixed text align in calendar view

--- a/composersCouch/static/less/request/inbox.less
+++ b/composersCouch/static/less/request/inbox.less
@@ -22,3 +22,6 @@
     }
   }
 }
+.request {
+  text-align: left;
+}
